@@ -1,3 +1,12 @@
+2008-03-27  Sam Weinig  <sam@webkit.org>
+
+        Clean up code and debug output.
+
+        * VM/CodeBlock.cpp:
+        (KJS::CodeBlock::dump):
+        * VM/Machine.cpp:
+        (KJS::Machine::privateExecute):
+
 2008-03-27  Geoffrey Garen  <ggaren@apple.com>
 
         Moved an ASSERT to a more logical place.
